Added solution alias.

--- a/homework.tex
+++ b/homework.tex
@@ -110,7 +110,7 @@
 \newcommand{\dx}{\mathrm{d}x}
 
 % Alias for the Solution section header
-\newcommand{\solution}{\textbf{\large Solution}}
+\newcommand{\solution}{\noindent\underline{\textbf{Solution}}}
 
 % Probability commands: Expectation, Variance, Covariance, Bias
 \newcommand{\E}{\mathrm{E}}
@@ -124,7 +124,7 @@
 \begin{document}
 
 \begin{homeworkProblem}
-
+    \solution
 \end{homeworkProblem}
 
 \pagebreak
